--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                <li><a href = "acad_adv.html">Academic advising</a></li>
+                <li><a href = "maize.html">Foodpantry</a></li>
+                <li><a href = "cew.html">CEW+</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
@@ -92,6 +92,13 @@
                 <li><strong>Community Engagement:</strong> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
                 <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
+
+            <img src="images/Fun4.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun5.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun6.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun7.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun8.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun9.jpg" alt="Maize event" Width="30%" height="auto">
         </section>
         <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
