--- a/cew.html
+++ b/cew.html
@@ -27,7 +27,7 @@
         <h2>Our Mission</h2>
         <p>Our mission is to address the challenges and opportunities faced by women and other underrepresented groups at U-M. We provide comprehensive support services, including counseling, career development, and financial assistance.</p>
 
-        <img src="images/CEW1.jpg" alt="Graduation cap" Width="70%" height="auto">
+        <img src="images/CEW1.jpg" alt="Graduation cap" width="70%" height="auto">
 
         <section id="news">    
             <h2>News and Updates</h2>
@@ -43,7 +43,7 @@
             </ul>
         </section>
 
-        <img src="images/CEW2.jpg" alt="Classroom speech" Width="70%" height="auto">
+        <img src="images/CEW2.jpg" alt="Classroom speech" width="70%" height="auto">
 
         <section id="events">
             <h2>Events & Workshops</h2>
@@ -59,7 +59,7 @@
                     Ingalls Mall</li>
                 <li><a href="https://www.cew.umich.edu/events/virtual-cewinspire-midweek-mindfulness-guided-sit-september-4/">VIRTUAL | CEW+Inspire Midweek Mindfulness Guided Sit</a> |
                     September 4, 2024 |
-                    12:15 pm - 12:45 pm </a></li>
+                    12:15 pm - 12:45 pm </li>
                 <li><a href="#">COUNTS Resource Fair & Dinner </a> |
                     September 12, 2024 |
                     5:00 pm - 7:00 pm |
@@ -67,7 +67,7 @@
             </ul>
         </section>  
         
-        <img src="images/Campus_garden.jpg" alt="Campus Garden" Width="70%" height="auto">
+        <img src="images/Campus_garden.jpg" alt="Campus Garden" width="70%" height="auto">
 
         <section id="counseling">
             <h2>Counseling</h2>
@@ -87,14 +87,14 @@
             <!-- <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="UMSI Campus Fall" width="70%" height="auto"> -->
         </section>
 
-        <img src="images/UMSI_NQ_2.jpg" alt="North Quad" Width="50%" height="auto">
+        <img src="images/UMSI_NQ_2.jpg" alt="North Quad" width="50%" height="auto">
 
-        <h3>Get Involved</h3>
+        <h2>Get Involved</h2>
         <p>CEW+ offers many opportunities to get involved and make a difference. Whether you’re interested in volunteering, attending events, or applying for a scholarship, we invite you to be part of our community. <a href="https://www.cew.umich.edu/join-cew/">Join Us here</a></p>
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Have questions?<a href="(734) 764-6360"> Reach out to us </a> or visit our office at 330 E. Liberty Street.</p>
+            <p>Have questions? <a href="tel:7347646360"> Reach out to us </a> or visit our office at 330 E. Liberty Street.</p>
         </section>
     </main>
 
