--- a/maize.html
+++ b/maize.html
@@ -28,7 +28,7 @@
         <h2>Our Mission</h2>
         <p>Our mission is to ensure that no student goes hungry and that all Wolverines have access to the resources they need to thrive academically and personally. We offer a variety of food options, hygiene products, and other essentials.</p>
 
-        <img src="images/Maize2.jpg" alt="Maize event" Width="50%" height="auto">
+        <img src="images/Maize2.jpg" alt="Maize event" width="50%" height="auto">
 
         <section id="services">
             <h2>Services We Offer</h2>
@@ -48,12 +48,12 @@
             <!-- <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="UMSI Campus Fall" width="70%" height="auto"> -->
         </section>
 
-        <img src="images/Maize_img3.jpg" alt="Maize event" Width="30%" height="auto">
-        <img src="images/Maize_img6.jpg" alt="Maize event" Width="30%" height="auto">
-        <img src="images/Maize_img1.jpg" alt="Maize event" Width="30%" height="auto">
-        <img src="images/Maize_img5.jpg" alt="Maize event" Width="30%" height="auto">
-        <img src="images/Maize_img4.jpg" alt="Maize event" Width="30%" height="auto">
-        <img src="images/Maize_img2.jpg" alt="Maize event" Width="30%" height="auto">
+        <img src="images/Maize_img3.jpg" alt="Maize event" width="30%" height="auto">
+        <img src="images/Maize_img6.jpg" alt="Maize event" width="30%" height="auto">
+        <img src="images/Maize_img1.jpg" alt="Maize event" width="30%" height="auto">
+        <img src="images/Maize_img5.jpg" alt="Maize event" width="30%" height="auto">
+        <img src="images/Maize_img4.jpg" alt="Maize event" width="30%" height="auto">
+        <img src="images/Maize_img2.jpg" alt="Maize event" width="30%" height="auto">
 
         <section id="volunteer">
             <h2>How to Get Involved</h2>
@@ -62,7 +62,7 @@
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Have questions?<a href="https://mbc.studentlife.umich.edu/contact/"> Reach out to us </a> or visit our office in the basement of the Betsy Barbour Residence Hall.</p>
+            <p>Have questions? <a href="https://mbc.studentlife.umich.edu/contact/"> Reach out to us </a> or visit our office in the basement of the Betsy Barbour Residence Hall.</p>
         </section>
     </main>
 
