--- a/acad_adv.html
+++ b/acad_adv.html
@@ -6,7 +6,7 @@
     <title>Academic Advising at UMSI</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -19,10 +19,10 @@
         <h1>Academic Advising at UMSI</h1>
 
     </header>
-    <main>
+    <main id="main-content">
         <div>
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success by offering a wide array of resources and services. Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies. UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework. Additionally, our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills. By utilizing these academic resources, UMSI students can thrive in their studies and achieve their educational goals. </p>
-            <img src="images/UMSI_MHIClassroom_02202023_12.jpg" alt="UMSI Classroom" Width="70%" height="auto">
+            <img src="images/UMSI_MHIClassroom_02202023_12.jpg" alt="UMSI Classroom" width="70%" height="auto">
 
             <section id="news">    
                 <h2>News and Updates</h2>
@@ -70,10 +70,10 @@
                     <li><a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources?authuser=4#h.y7jdmkk41365">Emergency & Supportive Contacts</a></li>
                 </ul>
 
-                <img src="images/UMSI_Fallcampus.jpg" alt="UMSI North Quad" Width="70%" height="auto">
+                <img src="images/UMSI_Fallcampus.jpg" alt="UMSI North Quad" width="70%" height="auto">
             </section>
 
-            <section id="testimonials"></section>
+            <section id="testimonials">
                 <h2>Student Testimonials</h2>
                 <blockquote>
                     <p>"The advising team at UMSI has been incredibly supportive throughout my studies. Their guidance helped me choose the right courses and plan my career path."</p>
@@ -88,10 +88,6 @@
 
         </div>
     
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </main>
     <footer>
         <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
