--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Student Success Portal</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <header>
         <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
@@ -17,10 +17,11 @@
                 <li><a href = "cew.html">CEW+</a></li>
             </ul>
         </nav>
-        <h1>Student Success Portal</h1>
+        
 
     </header>
-    <main>
+    <main id="main-content">
+        <h1>Student Success Portal</h1>
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
@@ -82,9 +83,6 @@
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
-            <article>
-
-            </article>
             <ul>
                 <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
                 <li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
@@ -93,12 +91,12 @@
                 <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
 
-            <img src="images/Fun4.jpg" alt="Maize event" Width="30%" height="auto">
-            <img src="images/Fun5.jpg" alt="Maize event" Width="30%" height="auto">
-            <img src="images/Fun6.jpg" alt="Maize event" Width="30%" height="auto">
-            <img src="images/Fun7.jpg" alt="Maize event" Width="30%" height="auto">
-            <img src="images/Fun8.jpg" alt="Maize event" Width="30%" height="auto">
-            <img src="images/Fun9.jpg" alt="Maize event" Width="30%" height="auto">
+            <img src="images/Fun4.jpg" alt="Michigan band" width="30%" height="auto">
+            <img src="images/Fun5.jpg" alt="Museum" width="30%" height="auto">
+            <img src="images/Fun6.jpg" alt="Singing" width="30%" height="auto">
+            <img src="images/Fun7.jpg" alt="Badminton" width="30%" height="auto">
+            <img src="images/Fun8.jpg" alt="Students Sitting under a tree" width="30%" height="auto">
+            <img src="images/Fun9.jpg" alt="Girl eating" width="30%" height="auto">
         </section>
         <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
