--- a/acad_adv.html
+++ b/acad_adv.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
     <title>Academic Advising at UMSI</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li>Academic advising</li>
+                <li><a href= "acad_adv.html" class="active">Academic advising</a></li>
                 <li><a href = "maize.html">Foodpantry</a></li>
                 <li><a href = "cew.html">CEW+</a></li>
             </ul>
@@ -22,7 +24,7 @@
     <main id="main-content">
         <div>
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success by offering a wide array of resources and services. Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies. UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework. Additionally, our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills. By utilizing these academic resources, UMSI students can thrive in their studies and achieve their educational goals. </p>
-            <img src="images/UMSI_MHIClassroom_02202023_12.jpg" alt="UMSI Classroom" width="70%" height="auto">
+            <img src="images/UMSI_MHIClassroom_02202023_12.jpg" alt="UMSI Classroom" class="centered-image">
 
             <section id="news">    
                 <h2>News and Updates</h2>
@@ -37,7 +39,7 @@
             <section id="advisors">
                 <h2>Meet the Advisors</h2>
                 <p>Our team of experienced academic advisors is dedicated to helping you achieve your goals. Get to know our advisors and learn how they can support your academic and professional development.</p>
-                <img src="images/Natalie.jpg" alt="Natalie Drobny">
+                <img src="images/Natalie.jpg" alt="Natalie Drobny" class="centered-image">
 
                 <p>MSI Academic Advisor
                 she/her/hers</p>
@@ -54,7 +56,7 @@
                 </ul>
 
                 <p>Advising Business Hours - Monday through Friday from 9:00 to 5:00 PM (ET)</p>
-                <img src="images/UMSI_Classroom_2.jpg" alt="UMSI students in classroom" width="70%" height="auto">
+                <img src="images/UMSI_Classroom_2.jpg" alt="UMSI students in classroom" class="centered-image">
 
             </section>
     
@@ -70,7 +72,7 @@
                     <li><a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources?authuser=4#h.y7jdmkk41365">Emergency & Supportive Contacts</a></li>
                 </ul>
 
-                <img src="images/UMSI_Fallcampus.jpg" alt="UMSI North Quad" width="70%" height="auto">
+                <img src="images/UMSI_Fallcampus.jpg" alt="UMSI North Quad">
             </section>
 
             <section id="testimonials">
