--- a/cew.html
+++ b/cew.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
     <title>CEW+ | Center for the Education of Women</title>
 </head>
 <body>
@@ -13,11 +15,11 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "acad_adv.html">Academic advising</a></li>
                 <li><a href = "maize.html">Foodpantry</a></li>
-                <li>CEW+</li>
+                <li><a href= "cew.html" class="active">CEW+</a></li>
             </ul>
         </nav>
         <h1>CEW+ | Center for the Education of Women</h1>
-        <p>Empowering Women and Underrepresented Communities at U-M</p>
+        <p class="descr">Empowering Women and Underrepresented Communities at U-M</p>
     </header>
     
     <main id="main-content">
@@ -27,7 +29,7 @@
         <h2>Our Mission</h2>
         <p>Our mission is to address the challenges and opportunities faced by women and other underrepresented groups at U-M. We provide comprehensive support services, including counseling, career development, and financial assistance.</p>
 
-        <img src="images/CEW1.jpg" alt="Graduation cap" width="70%" height="auto">
+        <img src="images/CEW1.jpg" alt="Graduation cap">
 
         <section id="news">    
             <h2>News and Updates</h2>
@@ -43,7 +45,7 @@
             </ul>
         </section>
 
-        <img src="images/CEW2.jpg" alt="Classroom speech" width="70%" height="auto">
+        <img src="images/CEW2.jpg" alt="Classroom speech">
 
         <section id="events">
             <h2>Events & Workshops</h2>
@@ -67,13 +69,13 @@
             </ul>
         </section>  
         
-        <img src="images/Campus_garden.jpg" alt="Campus Garden" width="70%" height="auto">
+        <img src="images/Campus_garden.jpg" alt="Campus Garden">
 
         <section id="counseling">
             <h2>Counseling</h2>
             <p>Schedule an Appointment | There are three ways to schedule an appointment.</p>
             <ul>
-                <li>Fill out this <a href="https://www.cew.umich.edu/counseling/schedule-an-appointment/">online form</a>. A member of our team will be in touch (via phone or email – your choice) to formally schedule your appointment within 24 hours of the next business day once the form is submitted and reviewed.Schedule an appointment online</li>
+                <li>Fill out this <a href="">online form</a>. A member of our team will be in touch (via phone or email – your choice) to formally schedule your appointment within 24 hours of the next business day once the form is submitted and reviewed.Schedule an appointment online</li>
                 <li>Call 734-764-6360 between 8:30 am and 4:30 pm Monday-Friday. If you get voicemail, please leave a message and we will return your voicemail as quickly as possible.</li>
                 <li>Email us at <a href="mailto:cew.appts@umich.edu">cew.appts@umich.edu </a>. Please be advised that depending on response rates to emails, you may not get the first available appointment offered.</li>
             </ul>
@@ -87,7 +89,7 @@
             <!-- <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="UMSI Campus Fall" width="70%" height="auto"> -->
         </section>
 
-        <img src="images/UMSI_NQ_2.jpg" alt="North Quad" width="50%" height="auto">
+        <img src="images/UMSI_NQ_2.jpg" alt="North Quad">
 
         <h2>Get Involved</h2>
         <p>CEW+ offers many opportunities to get involved and make a difference. Whether you’re interested in volunteering, attending events, or applying for a scholarship, we invite you to be part of our community. <a href="https://www.cew.umich.edu/join-cew/">Join Us here</a></p>
