--- a/maize.html
+++ b/maize.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
     <title>Maize & Blue - Food Pantry</title>
 </head>
 <body>
@@ -12,23 +14,23 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "acad_adv.html">Academic advising</a></li>
-                <li>Foodpantry</li>
+                <li><a href = "maize.html" class="active">Foodpantry</a></li>
                 <li><a href = "cew.html">CEW+</a></li>
             </ul>
         </nav>
         <h1>Maize & Blue Cupboard</h1>
-        <p>The Food Pantry of the University of Michigan</p>
+        <p class="descr">The Food Pantry of the University of Michigan</p>
     </header>
 
     <main id="main-content">
         <h2>Welcome!</h2>
         <p>The Maize & Blue Cupboard provides members of the University of Michigan community with equitable access to healthy, nutritious, and nourishing food and other resources. We believe that food insecurity should not be a barrier to academic success, and we are here to help.</p>
-        <img src="images/Maize1.jpeg" alt="Maize & Blue Cupboard Pantry">
+        <img src="images/Maize1.jpeg" alt="Maize & Blue Cupboard Pantry" class="centered-image">
 
         <h2>Our Mission</h2>
         <p>Our mission is to ensure that no student goes hungry and that all Wolverines have access to the resources they need to thrive academically and personally. We offer a variety of food options, hygiene products, and other essentials.</p>
 
-        <img src="images/Maize2.jpg" alt="Maize event" width="50%" height="auto">
+        <img src="images/Maize2.jpg" alt="Maize event" width="50%" height="auto" class="centered-image">
 
         <section id="services">
             <h2>Services We Offer</h2>
