--- a/maize.html
+++ b/maize.html
@@ -13,13 +13,16 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "acad_adv.html">Academic advising</a></li>
+                <li><a href = "acad_adv.html">Academic Advising</a></li>
                 <li><a href = "maize.html" class="active">Foodpantry</a></li>
                 <li><a href = "cew.html">CEW+</a></li>
             </ul>
         </nav>
         <h1>Maize & Blue Cupboard</h1>
         <p class="descr">The Food Pantry of the University of Michigan</p>
+
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
+
     </header>
 
     <main id="main-content">
@@ -50,12 +53,15 @@
             <!-- <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="UMSI Campus Fall" width="70%" height="auto"> -->
         </section>
 
-        <img src="images/Maize_img3.jpg" alt="Maize event" width="30%" height="auto">
-        <img src="images/Maize_img6.jpg" alt="Maize event" width="30%" height="auto">
-        <img src="images/Maize_img1.jpg" alt="Maize event" width="30%" height="auto">
-        <img src="images/Maize_img5.jpg" alt="Maize event" width="30%" height="auto">
-        <img src="images/Maize_img4.jpg" alt="Maize event" width="30%" height="auto">
-        <img src="images/Maize_img2.jpg" alt="Maize event" width="30%" height="auto">
+
+        <section class="photo-gallery">
+            <img src="images/Maize_img3.jpg" alt="Donations" width="100%" height="auto">
+            <img src="images/Maize_img6.jpg" alt="Food basket" width="100%" height="auto">
+            <img src="images/Maize_img1.jpg" alt="Maize event1" width="100%" height="auto">
+            <img src="images/Maize_img5.jpg" alt="Maize event2" width="100%" height="auto">
+            <img src="images/Maize_img4.jpg" alt="Maize event3" width="100%" height="auto">
+            <img src="images/Maize_img2.jpg" alt="Maize event4" width="100%" height="auto">
+        </section>
 
         <section id="volunteer">
             <h2>How to Get Involved</h2>
@@ -66,10 +72,33 @@
             <h2>Contact Us</h2>
             <p>Have questions? <a href="https://mbc.studentlife.umich.edu/contact/"> Reach out to us </a> or visit our office in the basement of the Betsy Barbour Residence Hall.</p>
         </section>
+
+        <script>
+            // JavaScript to toggle dark mode
+        const toggleButton = document.getElementById('dark-mode-toggle');
+
+        // Check if user prefers dark mode in the system
+        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+
+        // Set initial mode based on system preference
+        if (prefersDark) {
+            document.body.classList.add('dark');
+        }
+
+        // Toggle the 'dark' class on button click
+        toggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark'); // Toggle dark mode
+            const isDarkMode = document.body.classList.contains('dark');
+            toggleButton.textContent = isDarkMode ? "Switch to Light Mode" : "Switch to Dark Mode";
+        });
+        </script>
     </main>
 
     <footer>
-        <p>&copy; 2024 Maize & Blue Cupboard | University of Michigan</p>
+        <p>&copy; <span id="year"></span> Maize & Blue Cupboard | University of Michigan</p>
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
         <!-- <p><a href="https://mbc.umich.edu">Visit our official website</a></p> -->
     </footer>
 
